--- a/week04/styles/layout-exercises.css
+++ b/week04/styles/layout-exercises.css
@@ -21,21 +21,26 @@ div {
     height: 200px;
 }
 
-.flex {
-    background-color: #aba;
-    /* write declarations here */
 
+.flex {
+  background-color: #aba;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .grid {
-    background-color: #abb;
-    /* enter declarations here */
-
+  background-color: #abb;
+  display: grid;
+  place-items: center;
 }
 
-.container2 {
-    /* write declarations here */
 
+
+.container2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .two {
@@ -44,16 +49,23 @@ div {
 }
 
 .container3 {
-    /* write declarations here */
-
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;  /* or grid-template-columns: repeat(3, 1fr); */
 }
-
+              
 .columns-3 {
-    /* write declaration here */
-
+  grid-column: 1/4; /* or grid-column: span 3; */
 }
+
 
 .three {
     margin: .25rem;
     background-color: #abd;
 }
+
+
+
+
+
+
+
